fix: layout shift when scrollbar appears

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,6 +133,10 @@ summary {
 }
 
 /* GENERAL STYLES */
+html {
+	scrollbar-gutter: stable;
+}
+
 body {
 	color: var(--c3);
 }
